apps/hash-graph/lib/query-builder-derive/tests/ui/fail/skip_not_flag.rs
use query_builder_derive::QueryBuilder;

#[derive(QueryBuilder)]
pub enum QueryPath {
    #[builder(skip = "false")]
    Nested,
}

fn main() {}
